Fix: bad contrast

--- a/assets/styles/illustrations.css
+++ b/assets/styles/illustrations.css
@@ -1,3 +1,7 @@
+figure img {
+  filter: invert(1);
+}
+
 figure.spread {
   margin: 5em 0;
 }
