--- a/main.css
+++ b/main.css
@@ -12,6 +12,10 @@ body {
   margin: 0;
   font-family: 'Alegreya', serif;
   background-color: black;
+  color: #b9b9b9;
+}
+
+body strong {
   color: white;
 }
 
